Update to Minecraft 1.20.1